Colab を使用して作成されました

--- a/第5章/【機械学習】顧客の退会を予測する10本ノック.ipynb
+++ b/第5章/【機械学習】顧客の退会を予測する10本ノック.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3ppAEk9DRapGBFjmGpgre",
+      "authorship_tag": "ABX9TyM9ITtgdijJlObPDss//HxP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7352,12 +7352,12 @@
         "X_train.head()"
       ],
       "metadata": {
-        "id": "6JRL5H94QKwI",
-        "outputId": "5d8f6e06-2d39-45de-9bb7-724779daf74f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        }
+        },
+        "id": "6JRL5H94QKwI",
+        "outputId": "5d8f6e06-2d39-45de-9bb7-724779daf74f"
       },
       "execution_count": 84,
       "outputs": [
@@ -7704,12 +7704,12 @@
         "X_test.head()"
       ],
       "metadata": {
-        "id": "vhkE-2NbQWBx",
-        "outputId": "0ca016f5-9875-42e3-8737-18d98ce13b15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        }
+        },
+        "id": "vhkE-2NbQWBx",
+        "outputId": "0ca016f5-9875-42e3-8737-18d98ce13b15"
       },
       "execution_count": 85,
       "outputs": [
@@ -8056,12 +8056,12 @@
         "y_train.head()"
       ],
       "metadata": {
-        "id": "0HKg90iAQeEu",
-        "outputId": "88a1d82a-a503-4138-9ecb-72437b68289e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 259
-        }
+        },
+        "id": "0HKg90iAQeEu",
+        "outputId": "88a1d82a-a503-4138-9ecb-72437b68289e"
       },
       "execution_count": 86,
       "outputs": [
@@ -8143,12 +8143,12 @@
         "y_test.head()"
       ],
       "metadata": {
-        "id": "DOBK3to9QlFX",
-        "outputId": "08077c01-ed6c-4885-bd09-a7f0b2677e4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 259
-        }
+        },
+        "id": "DOBK3to9QlFX",
+        "outputId": "08077c01-ed6c-4885-bd09-a7f0b2677e4b"
       },
       "execution_count": 87,
       "outputs": [
@@ -8232,11 +8232,11 @@
         "print(y_test_pred)"
       ],
       "metadata": {
-        "id": "x7250kZnQ1xv",
-        "outputId": "2b24b079-0d47-46a7-9656-be2c706fe294",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x7250kZnQ1xv",
+        "outputId": "2b24b079-0d47-46a7-9656-be2c706fe294"
       },
       "execution_count": 88,
       "outputs": [
@@ -8277,12 +8277,12 @@
         "results_test.head()"
       ],
       "metadata": {
-        "id": "uPyX5KItRKUC",
-        "outputId": "29ff9dab-c43d-4c46-dcdc-fee1c78df708",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "uPyX5KItRKUC",
+        "outputId": "29ff9dab-c43d-4c46-dcdc-fee1c78df708"
       },
       "execution_count": 89,
       "outputs": [
@@ -8574,16 +8574,99 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### ノック48:予測モデルの評価を行い、モデルのチューニングをしてみる。"
+      ],
       "metadata": {
         "id": "nxA4LyHtTZog"
       }
     },
     {
       "cell_type": "code",
+      "source": [
+        "correct = len(results_test.loc[results_test[\"y_test\"]==results_test[\"y_pred\"]])\n",
+        "data_count = len(results_test)\n",
+        "score_test = correct / data_count\n",
+        "print(score_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OKzao7GJRZrg",
+        "outputId": "68e0d859-3c30-452c-9cd0-2cb8b47aff10"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8916349809885932\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 精度はscodeを使うと簡単に確認できる。\n",
+        "print(model.score(X_test, y_test))\n",
+        "print(model.score(X_train, y_train))"
+      ],
+      "metadata": {
+        "id": "fR5fqqJAURv0",
+        "outputId": "ad04165e-333d-420f-e4aa-ea5c23af5686",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8916349809885932\n",
+            "0.9759188846641318\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上記を見ると、過学習の傾向がある。\n",
+        "# 決定木は深さを変えることもできる。\n",
+        "model = DecisionTreeClassifier(random_state=0, max_depth=5)\n",
+        "model.fit(X_train, y_train)\n",
+        "print(model.score(X_test, y_test))\n",
+        "print(model.score(X_train, y_train))"
+      ],
+      "metadata": {
+        "id": "xvrcuSKjUlO-",
+        "outputId": "2574be17-5922-413f-c421-7131a9018e32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9201520912547528\n",
+            "0.9252217997465145\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OKzao7GJRZrg"
+        "id": "IvGO7qrcVEbd"
       },
       "execution_count": null,
       "outputs": []
